--- a/about-us.html
+++ b/about-us.html
@@ -256,7 +256,7 @@
 
                         
 
-                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
+                        <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-three"><span class="btn-title">Buy Tickets</span></a></div>
 
                     </div>
 
@@ -921,8 +921,6 @@
 <!-- Color Setting -->
 
 <script src="js/color-settings.js"></script>
-
-
 
 </body>
 </html>
