--- a/testing.html
+++ b/testing.html
@@ -135,16 +135,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-outer">
-
-                            <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-                        </div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -190,7 +181,8 @@
             <div class="content-box">
                 <div class="address"><span class="icon fa fa-map-marker-alt"></span>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
-				<h5><strong><Mark>THEME: Metrics and Measurements – Mirrors of Enterprise Mental Models</Mark></strong></h5><Br><Br><Br>
+				<figure class="image wow fadeIn"><img src="images/resource/theme.png" alt=""></figure>
+				<Br><Br><Br>
             </div>
             <!-- Countdown -->
             <div class="countdown clearfix">
@@ -239,7 +231,7 @@
 
                         
 
-                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
+                        <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-three"><span class="btn-title">Buy Tickets</span></a></div>
 
                     </div>
 
@@ -1050,7 +1042,7 @@
 
             <div class="sec-title text-center">
 
-                <span class="title">Get Ticket</span>
+                <span class="title">Buy Tickets</span>
 
                 <h2>Choose a Ticket</h2>
 
@@ -1278,7 +1270,7 @@
 
         <div class="auto-container">
 
-            <div class="sec-title">
+            <div class="sec-title text-center">
 
                 <span class="title">Our</span>
 
@@ -1288,7 +1280,7 @@
 
 
 
-            <div class="sponsors-outer">
+            <div class="sponsors-outer text-center">
 
                 <h3>Platinum Sponsors</h3>
 
@@ -1310,7 +1302,7 @@
 
 
 
-            <div class="sponsors-outer">
+            <div class="sponsors-outer text-center">
 
                 <h3>Gold Sponsors</h3>
 
@@ -1467,13 +1459,15 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
 
                                     </ul>
 
@@ -1523,7 +1517,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -1646,7 +1640,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -1664,7 +1658,7 @@
 </div>
 
 <!--End pagewrapper-->
-
+</div>
 <!--Search Popup-->
 
 <div id="search-popup" class="search-popup">
