--- a/about-us.html
+++ b/about-us.html
@@ -142,12 +142,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -288,7 +283,7 @@
 
     <!-- Fun Fact Section -->
 
-    <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
+    <section class="fun-fact-section style-two" style="background-image: url(images/main-slider/scrum-pages-2.png);">
 
         <div class="auto-container">
 
@@ -516,7 +511,7 @@
 
     <!--End Features Section -->
 
-    <!-- Subscribe Section -->
+     <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -532,7 +527,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>Newsletter</h2>
+                            <h2>Subscribe our <br>newsletter</h2>
 
                         </div>
 
@@ -574,9 +569,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -642,13 +635,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -697,7 +693,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -739,7 +735,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -789,6 +785,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -819,7 +816,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -832,9 +829,6 @@
     </footer>
 
     <!-- End Footer -->
-
-
-
 </div>
 
 <!--End pagewrapper-->
