--- a/sponsors.html
+++ b/sponsors.html
@@ -116,12 +116,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -196,7 +191,7 @@
 
         <div class="auto-container">
 
-            <div class="sec-title">
+            <div class="sec-title text-center">
 
                 <span class="title">Our</span>
 
@@ -206,7 +201,7 @@
 
 
 
-            <div class="sponsors-outer">
+            <div class="sponsors-outer text-center">
 
                 <h3>Platinum Sponsors</h3>
 
@@ -228,7 +223,7 @@
 
 
 
-            <div class="sponsors-outer">
+            <div class="sponsors-outer text-center">
 
                 <h3>Gold Sponsors</h3>
 
@@ -258,7 +253,7 @@
 
     <!--End Clients Section-->
 
-   <!-- Subscribe Section -->
+    <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -274,7 +269,7 @@
 
                             <span class="icon fa fa-envelope"></span>
 
-                            <h2>Subscribe our <br>newslatter</h2>
+                            <h2>Subscribe our <br>newsletter</h2>
 
                         </div>
 
@@ -316,9 +311,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -384,13 +377,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -439,7 +435,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -481,7 +477,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -531,6 +527,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -561,7 +558,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -574,7 +571,6 @@
     </footer>
 
     <!-- End Footer -->
-
 
 
 </div>
