--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+<head>
+<meta charset="utf-8">
 <title>Scrum Day Bangalore 2021 - Hosted by Xebia</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -26,7 +26,6 @@
 
 <div class="page-wrapper">
  	
-
     <!-- Header Span -->
 
     <span class="header-span"></span>
@@ -101,7 +100,7 @@
 
                                 </li>
 
-                                <li Class="current dropdown"><a href="contact.html">Contact</a></li>
+                                <li class="current dropdown"><a href="contact.html">Contact</a></li>
 
                             </ul>
 
@@ -117,12 +116,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -271,7 +265,7 @@
     </section>
     <!--End Contact Page Section -->
 
-    <!-- Subscribe Section -->
+   <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -329,9 +323,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -397,13 +389,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -452,7 +447,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -494,7 +489,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -544,6 +539,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -574,7 +570,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -587,7 +583,6 @@
     </footer>
 
     <!-- End Footer -->
-
 
 
 </div>
