--- a/error-page.html
+++ b/error-page.html
@@ -116,11 +116,6 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
 
                         <!-- Button Box -->
 
@@ -202,7 +197,7 @@
     </section>
     <!--Error Section-->
 
-    <!-- Subscribe Section -->
+     <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -260,9 +255,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -328,13 +321,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -383,7 +379,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -425,7 +421,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -475,6 +471,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -505,7 +502,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -519,7 +516,9 @@
 
     <!-- End Footer -->
 
+
 </div>
+
 <!--End pagewrapper-->
 
 <!--Search Popup-->
