--- a/event-detail.html
+++ b/event-detail.html
@@ -115,12 +115,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -186,14 +181,14 @@
     <section class="event-detail">
         <div class="auto-container">
             <div class="image-box">
-                <figure class="image wow fadeIn"><a href="images/resource/event-detail.jpg" class="lightbox-image"><img src="images/resource/event-detail.jpg" alt=""></a></figure>
+                <figure class="image wow fadeIn"><a href="images/gallery/6.jpg" class="lightbox-image"><img src="images/gallery/6.jpg" alt=""></a></figure>
             </div>
 
             <div class="content-box">
                 <div class="speaker-info">
                     <figure class="thumb"><img src="images/resource/thumb-1.jpg" alt=""></figure>
-                    <h5 class="name">Ashli Scroggy</h5>
-                    <span class="designation">Founder & CEO</span>
+                    <h5 class="name">Vikrant Singh</h5>
+                    <span class="designation">Event Manager</span>
                 </div>
                 <ul class="upper-info">
                     <li><span class="icon far fa-clock"></span>9.00 AM - 10.00 PM</li>
@@ -204,7 +199,7 @@
                 <p>Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.duis aute irure dolor in reprehen derit in voluptate velit esse cillum dolore eu fugiat nulla pariatur cepteur sint occaecat cupidatat.</p>
                 <div class="row two-column">
                     <div class="column col-lg-6 col-md-12">                
-                        <figure class="image"><img src="images/resource/post-img.jpg" alt=""></figure>
+                        <figure class="image"><img src="images/gallery/1.jpg" alt=""></figure>
                     </div>
                     <div class="column col-lg-6 col-md-12">                
                         <h4>Evolution of user Interface</h4>
@@ -282,9 +277,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -350,13 +343,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -405,7 +401,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -447,7 +443,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -497,6 +493,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -527,7 +524,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -543,6 +540,7 @@
 
 
 </div>
+
 <!--End pagewrapper-->
 
 <!--Search Popup-->
