--- a/faqs.html
+++ b/faqs.html
@@ -115,17 +115,11 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
                         <!-- Button Box -->
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
@@ -186,7 +180,7 @@
     <section class="faq-section">
         <div class="auto-container">
             <!-- Sec Title -->
-            <div class="sec-title">
+            <div class="sec-title text-center">
                 <span class="title">FAQ'S</span>
                 <h2>General <span>Questions</span></h2>
             </div>
@@ -299,7 +293,7 @@
                         </div>
                         
                         <div class="form-group col-lg-12 col-md-12 text-right">
-                            <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">Get A Quote</span></button>
+                            <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">Submit</span></button>
                         </div> 
                     </div>
                 </form>
@@ -308,7 +302,7 @@
     </section>
     <!--End Contact Section -->
 
-     <!-- Subscribe Section -->
+    <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -366,9 +360,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -434,13 +426,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -489,7 +484,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -531,7 +526,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -581,6 +576,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -611,7 +607,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -625,7 +621,9 @@
 
     <!-- End Footer -->
 
+
 </div>
+
 <!--End pagewrapper-->
 
 <!--Search Popup-->
