--- a/speakers.html
+++ b/speakers.html
@@ -193,15 +193,13 @@
                             <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
+						<h4 class="name"><a href="speakers-detail.html">Chris Lukassen</a></h4>
+                            <span class="designation">Head of Product<br>Xebia Academy</span>
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                                <li><a href="https://twitter.com/productsamurai"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/chrislukassen/"><i class="fab fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -214,209 +212,24 @@
                             <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
+                            <h4 class="name"><a href="speakers-detail.html">Padma Satyamurthy</a></h4>
+                            <span class="designation">Enterprise Transformation Leader <br> Walmart Labs</span>
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/padmas/"><i class="fab fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-                    <div class="inner-box">
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
-                        </div>
-                        <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Vikrant Singh</a></h4>
-                            <span class="designation">Event Manager</span>
-                        </div>
-                        <div class="social-box">
-                            <ul class="social-links social-icon-colored">
-                                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+  
             </div>
         </div>
     </section>
     <!-- End Speakers Section -->
 
-    <!-- Subscribe Section -->
-
-    <section class="subscribe-section">
-
-        <div class="auto-container">
-
-            <div class="content-box">
-
-                <div class="row">
-
-                    <div class="title-column col-lg-6 col-md-12">
-
-                        <div class="sec-title">
-
-                            <span class="icon fa fa-envelope"></span>
-
-                            <h2>Subscribe our <br>newsletter</h2>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="form-column col-lg-6 col-md-12">
-
-                        <!--Newsletter Form-->
-
-                        <div class="newsletter-form">
-
-                            <form method="post" action="https://scrumdaybangalore.org/">
-
-                                <div class="form-group">
-
-                                    <input type="email" name="field-name" value="" placeholder="Enter Your Email" required>
-
-                                    <button type="submit" class="theme-btn btn-style-three"><span class="btn-title">Subscribe</span></button>
-
-                                </div>
-
-                            </form>
-
-                        </div>
-
-                    </div>
-
-                    
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Subscribe Section -->
-
- <!-- Main Footer -->
+<!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -480,9 +293,7 @@
 
                                     <ul class="user-links">
 
-                                        <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
@@ -526,13 +337,7 @@
 
                                         <ul class="contact-list">
 
-                                            <li>
-
-                                                <span class="icon flaticon-clock"></span>
-
-                                                <div class="text">09:00 AM - 06:00 PM</div>
-
-                                            </li>
+ 
 
 
 
@@ -676,6 +481,8 @@
     </footer>
 
     <!-- End Footer -->
+
+
 </div>
 
 <!--End pagewrapper-->
