--- a/testing.html
+++ b/testing.html
@@ -302,7 +302,7 @@
                             <span class="designation">Head of Product<br>Xebia Academy</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/speaker/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="chris-lukassen.html"><img src="images/speaker/speaker-1.jpg" alt=""></a></figure> 
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
