--- a/testing.html
+++ b/testing.html
@@ -321,7 +321,7 @@
                             <span class="designation">Enterprise Transformation Leader <br> Walmart Labs</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/speaker/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="padma-satyamurthy.html"><img src="images/speaker/speaker-2.jpg" alt=""></a></figure> 
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
