--- a/speakers.html
+++ b/speakers.html
@@ -190,7 +190,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/speaker/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="chris-lukassen.html"><img src="images/speaker/speaker-1.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
 						<h4 class="name"><a href="chris-lukassen.html">Chris Lukassen</a></h4>
@@ -212,7 +212,7 @@
                             <figure class="image"><a href="padma-satyamurthy.html"><img src="images/speaker/speaker-2.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Padma Satyamurthy</a></h4>
+                            <h4 class="name"><a href="padma-satyamurthy.html">Padma Satyamurthy</a></h4>
                             <span class="designation">Enterprise Transformation Leader <br> Walmart Labs</span>
                         </div>
                         <div class="social-box">                            
