--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@
                             <div class="sec-title">
                                 <h2>Get in Touch</h2>
                             </div>
-                            <form method="post" action="https://scrumdaybangalore.org/" id="contact-form">
+                            <form method="post" action="contact-form-handler.php" id="contact-form">
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 form-group">
                                         <input type="text" name="username" placeholder="Name" required="">
