--- a/testing.html
+++ b/testing.html
@@ -100,7 +100,7 @@
  
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
                         </div>
                     </div>
                 </div>
