--- a/about-us.html
+++ b/about-us.html
@@ -147,7 +147,7 @@
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
