--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -247,7 +247,7 @@
 
                             <div class="btn-box">
 
-                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">BUY TICKET</span></a>
+                                <a href="http://bit.ly/sdbindiaeb" class="theme-btn btn-style-one"><span class="btn-title">GET TICKET</span></a>
 
                             </div>
 
