--- a/error-page.html
+++ b/error-page.html
@@ -114,14 +114,14 @@
 
                     <!-- Outer box -->
 
-                    <div class="outer-box">
+                     <div class="outer-box">
 
 
                         <!-- Button Box -->
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
