--- a/speakers.html
+++ b/speakers.html
@@ -121,7 +121,7 @@
 
                         <div class="btn-box">
 
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
@@ -132,8 +132,6 @@
             </div>
 
         </div>
-
-
 
         <!-- Mobile Menu  -->
 
