--- a/testing.html
+++ b/testing.html
@@ -268,6 +268,31 @@
                     </div>
                 </div>
 
+
+				<!-- Speaker Block -->
+                <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="info-box">
+                            <h4 class="name"><a href="speakers/chandan-patary">Chandan Lal Patary</a></h4>
+                            <span class="designation">Enterprise Agile Transformation<br>..</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a href="chandan-patary.html"><img src="images/speaker/speaker-3.jpg" alt=""></a></figure> 
+                        </div>
+                        <div class="social-box">                            
+                            <ul class="social-links social-icon-colored">
+                                <li><a href="https://twitter.com/patarychandan"><i class="fab fa-twitter"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/patarychandan/"><i class="fab fa-linkedin"></i></a></li>
+                                </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
   
             </div>
         </div>
