--- a/testing.html
+++ b/testing.html
@@ -134,8 +134,8 @@
             <div class="content-box">
                 <div class="address"><span class="icon fa fa-map-marker-alt"></span>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
-				<div class="address"><span class="icon fa fa-mind"></span>Metrics and Measurements<br>Mirrors of Enterprise mental models</div>
-				<figure class="image wow fadeIn"><img src="images/resource/theme.png" alt=""></figure>
+				<div class="address"><span class="icon fa fa-mind"></span>THEME: METRICS AND MEASUREMENTS<br><br><br>Mirrors of Enterprise mental models</div>
+			
 				<Br><Br><Br>
             </div>
             <!-- Countdown -->
