--- a/testing.html
+++ b/testing.html
@@ -132,9 +132,9 @@
 
         <div class="auto-container">
             <div class="content-box">
-                <div class="address"><span class="icon fa fa-map-marker-alt"></span>June 19, 2021 | LIVE VIRTUAL</div>
+                <div class="address"><span class="icon fa fa-map-marker-alt"></span><br>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
-				<div class="address"><span class="icon fa fa-mind"></span>THEME: METRICS AND MEASUREMENTS<br><br><br>Mirrors of Enterprise mental models</div>
+				<div class="address"><span class="icon fa fa-mind"></span>THEME: METRICS AND MEASUREMENTS<br><br>Mirrors of Enterprise mental models</div>
 			
 				<Br><Br><Br>
             </div>
