--- a/testing.html
+++ b/testing.html
@@ -134,17 +134,19 @@
             <div class="content-box">
                 <div class="address"><span class="icon fa fa-map-marker-alt"></span><br>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
-				<div class="address"><span class="icon fa fa-mind"></span>THEME: METRICS AND MEASUREMENTS<br><br>Mirrors of Enterprise mental models</div>
-			
+				
+				
+				 <div class="btn-box">
+                <a href="#" class="theme-btn btn-style-one"><span class="btn-title"><h5>THEME: METRICS AND MEASUREMENTS<br>Mirrors of Enterprise mental models</h5></span></a>
+            </div>
+
 				<Br><Br><Br>
             </div>
             <!-- Countdown -->
 				<div class="countdown clearfix">
                 <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2021/06/19 13:00:00"></div></div>
             </div>
-            <div class="btn-box">
-                <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Buy Tickets</span></a>
-            </div>
+
         </div> 
     </section>
     <!--End Banner Meetup -->
