--- a/speakers.html
+++ b/speakers.html
@@ -229,7 +229,7 @@
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="chandan-patary.html">Chandan Lal Patary</a></h4>
-                            <span class="designation">Enterprise Agile Transformation <br>..</span>
+                            <span class="designation">Enterprise Agile Transformation <br>Samsung Electronics</span>
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
