--- a/testing.html
+++ b/testing.html
@@ -277,7 +277,7 @@
                     <div class="inner-box">
                         <div class="info-box">
                             <h4 class="name"><a href="speakers/chandan-patary">Chandan Lal Patary</a></h4>
-                            <span class="designation">Enterprise Agile Transformation<br>..</span>
+                            <span class="designation">Enterprise Agile Transformation<br>Samsung Electronics</span>
                         </div>
                         <div class="image-box">
                             <figure class="image"><a href="chandan-patary.html"><img src="images/speaker/speaker-3.jpg" alt=""></a></figure> 
