--- a/speakers.html
+++ b/speakers.html
@@ -92,9 +92,9 @@
 
                                     <ul>
 
-                                        <li><a href="https://agilencr.org/">Agile NCR 2021</a></li>
+                                        <li><a href="https://agilencr.org/" target="blank">Agile NCR 2021</a></li>
 
-                                        <li><a href="https://www.rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://www.rsgpune.org/" target="blank">Regional Scrum Gathering Pune</a></li>
                                       
                                     </ul>
 
