--- a/speakers.html
+++ b/speakers.html
@@ -313,9 +313,9 @@
 
 
 
-                                        <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf" target="blank">Terms & Conditions</a></li>
 
-                                        <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf" target="blank">Privacy Policy</a></li>
 
                                         <li><a href="#">FAQs</a></li>
 										
