--- a/chandan-patary.html
+++ b/chandan-patary.html
@@ -171,7 +171,7 @@
             <h1>Chandan Lal Patary</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
-                <li>Chandan Lal Patary</li>
+                <li><a href="speakers.html">Speakers</a></li>
             </ul>
         </div>
     </section>
