--- a/chris-lukassen.html
+++ b/chris-lukassen.html
@@ -171,7 +171,7 @@
             <h1>Chris Lukassen</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
-                <li>Chris Lukassen</li>
+                <li><a href="speakers.html">Speakers</a></li>
             </ul>
         </div>
     </section>
