--- a/testing.html
+++ b/testing.html
@@ -132,7 +132,7 @@
 
         <div class="auto-container">
             <div class="content-box">
-                <div class="address"><span class="icon fa fa-map-marker-alt"></span><br>June 19, 2021 | LIVE VIRTUAL</div>
+               <div  class="address"><br><span class="icon fa fa-globe" aria-hidden="true""></span>June 19, 2021 | LIVE VIRTUAL</div>
                 <h2> Scrum Day<br>Bangalore 2021</h2>
 				
 				
