--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -346,18 +346,6 @@
 
                                     </div>
 
-                                    <ul class="social-icon-one social-icon-colored">
-
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-                                    </ul>
-
                                 </div>
 
                             </div>
@@ -549,7 +537,7 @@
 
                     <div class="copyright-text">
 
-                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
+                        <p>©2021 Scrum Day Bengaluru - All Rights Reserved </p>
 
                     </div>
 
