--- a/gallery.html
+++ b/gallery.html
@@ -273,65 +273,7 @@
     </section>
     <!--End Gallery Section -->
 
-    <!-- Subscribe Section -->
-
-    <section class="subscribe-section">
-
-        <div class="auto-container">
-
-            <div class="content-box">
-
-                <div class="row">
-
-                    <div class="title-column col-lg-6 col-md-12">
-
-                        <div class="sec-title">
-
-                            <span class="icon fa fa-envelope"></span>
-
-                            <h2>Subscribe our <br>newsletter</h2>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="form-column col-lg-6 col-md-12">
-
-                        <!--Newsletter Form-->
-
-                        <div class="newsletter-form">
-
-                            <form method="post" action="https://scrumdaybangalore.org/">
-
-                                <div class="form-group">
-
-                                    <input type="email" name="field-name" value="" placeholder="Enter Your Email" required>
-
-                                    <button type="submit" class="theme-btn btn-style-three"><span class="btn-title">Subscribe</span></button>
-
-                                </div>
-
-                            </form>
-
-                        </div>
-
-                    </div>
-
-                    
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Subscribe Section -->
-
- <!-- Main Footer -->
+  <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -367,17 +309,6 @@
 
                                     </div>
 
-                                    <ul class="social-icon-one social-icon-colored">
-
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-                                    </ul>
 
                                 </div>
 
@@ -395,9 +326,7 @@
 
                                     <ul class="user-links">
 
-                                        <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
@@ -441,13 +370,7 @@
 
                                         <ul class="contact-list">
 
-                                            <li>
-
-                                                <span class="icon flaticon-clock"></span>
-
-                                                <div class="text">09:00 AM - 06:00 PM</div>
-
-                                            </li>
+ 
 
 
 
@@ -578,7 +501,7 @@
 
                     <div class="copyright-text">
 
-                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
+                        <p>©2021 Scrum Day Bengaluru - All Rights Reserved </p>
 
                     </div>
 
