--- a/sponsors.html
+++ b/sponsors.html
@@ -289,18 +289,6 @@
 
                                     </div>
 
-                                    <ul class="social-icon-one social-icon-colored">
-
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-
-                                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-
-                                    </ul>
-
                                 </div>
 
                             </div>
@@ -492,7 +480,7 @@
 
                     <div class="copyright-text">
 
-                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
+                        <p>©2021 Scrum Day Bengaluru - All Rights Reserved </p>
 
                     </div>
 
