--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
                 <span class="title">Buy Tickets</span>
 
-                <h2>Choose a Ticket</h2>
+                <h2>Select your Early Bird Ticket (Max - 50)</h2>
 
             </div>
             <div class="outer-box">
