--- a/gunther-verheyen.html
+++ b/gunther-verheyen.html
@@ -214,8 +214,9 @@
 							Gunther left consulting in 2013 to found Ullizee-Inc and partner exclusively with Ken Schwaber, Scrum co-creator. He represented Ken and the Scrum.org organization in Europe, shepherded the “Professional Scrum” series, and guided Scrum.org’s global network of Professional Scrum Trainers. Gunther co-created Agility Path, EBM (Evidence-Based Management), and the Nexus framework for Scaled Professional Scrum.<br><br>
 							In 2016 Gunther definitely embarked on his journey to humanize the workplace as an independent Scrum Caretaker — a connector, teacher, writer, speaker. Gunther frequently helps organizations re-imagine their Scrum to create a more humane, a more Agile and thereby a more productive environment.<br><br>
 							Gunther is the author of the acclaimed books Scrum – A Pocket Guide (Van Haren Publishing, 2013-2019) and 97 Things every Scrum practitioner should know (O’Reilly Media, 2020). Ken Schwaber recommends Gunther’s pocket guide to Scrum as “…the best description of Scrum currently available” and “extraordinarily competent”. Several translations of his work are available.<br><br>
-							When not travelling for Scrum and humanizing the workplace, Gunther lives and works in Antwerp, Belgium. More at https://guntherverheyen.com/about</h4>
-                            <div class="row">
+							When not travelling for Scrum and humanizing the workplace, Gunther lives and works in Antwerp, Belgium. More at https://guntherverheyen.com/about</p>
+                            <h4>Sessions by Gunther</h4>
+							<div class="row">
                                 <div class="col-lg-4">
                                     <div class="speaker-session-info">
                                         <h5>June 19, 2021</h5>
