--- a/speakers.html
+++ b/speakers.html
@@ -267,7 +267,7 @@
                         </div>
                         <div class="social-box">                            
                             <ul class="social-links social-icon-colored">
-							<<li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
+							<li><a href="https://twitter.com/ageofproduct"><i class="fab fa-twitter"></i></a></li>
                                <li><a href="https://www.linkedin.com/in/stefanwolpers/"><i class="fab fa-linkedin"></i></a></li>
 							   <li><a href="https://berlin-product-people.com/"><i class="fab fa fa-globe"></i></a></li>
 							   <li><a href="https://age-of-product.com/"><i class="fab fa fa-blog"></i></a></li>
