--- a/speakers.html
+++ b/speakers.html
@@ -262,7 +262,7 @@
                             <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/Stefan-Wolpers.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers/stefan-wolpers">Stefan Wolpers</a></h4>
+                            <h4 class="name"><a href="speakers/stefan-wolpers.html">Stefan Wolpers</a></h4>
                         <span class="designation">PST, Agile Coach & Scrum Master<br>Berlin Product People GmbH</span>
                         </div>
                         <div class="social-box">                            
