--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                 <div class="inner-box">
                     <div class="info-box">
-                        <h4 class="name"><a href="speakers/stefan-wolpers">Stefan Wolpers</a></h4>
+                        <h4 class="name"><a href="speakers/stefan-wolpers.jpg">Stefan Wolpers</a></h4>
                         <span class="designation">PST, Agile Coach & Scrum Master<br>Berlin Product People GmbH</span>
             </div>
                         <div class="image-box">
